--- a/web/index.html
+++ b/web/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <h1>enviar email</h1>
-    <form action="http://localhost:8080" method="POST">
+    <form action="http://localhost/api" method="POST">
         <div>
             <label for="assunto">Assunto</label>
             <input name="assunto" type="text">
